package com.secondlab.cleanarchitecturenoteapp.core.util

object TestTags {

    const val ORDER_SECTION = "ORDER_SECTION"
    const val TITLE_TEXT_FIELDS = "TITLE_TEXT_FIELDS"
    const val CONTENT_TEXT_FIELDS = "CONTENT_TEXT_FIELDS"
    const val NOTE_ITEM = "NOTE_ITEM"
}